Fixed buy button alignment issue on some phones.

--- a/assets/stylesheets/app/app.css
+++ b/assets/stylesheets/app/app.css
@@ -533,4 +533,9 @@ Media queries
   .mobile-block {
     display: block;
   }
+
+  .btn-buy {
+    /* To align all buttons the same way. */
+    margin-right: 100%;
+  }
 }
